# rust-ci-timing-tracker

./: .gitignore  Cargo.toml  azure-pipelines.yml  commit.css  commit.html  index.html  index.js  overall.json
.github/workflows/: main.yml
ci/: azure-install-rust.yml
html/: commit.js  index.js
src/: lib.rs
