[package]
name = "tracker"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
edition = "2018"

[dependencies]
docopt = "1.0"
env_logger = "0.6"
failure = "0.1"
flate2 = "1.0"
log = "0.4"
rayon = "1.0"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"

[lib]
name = 'shared'
